--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.89MB/s(Youtube:不良林), server: 85.208.108.94, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇫🇷 法国-368.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.34MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-993.8KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-324.8KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-674.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.54MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.05MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇭🇰 香港-1.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-368.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-993.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-324.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
