--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-674.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.54MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-1.05MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-1.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.28MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-2.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-7.81MB/s(Youtube:不良林), server: cm--0755.8d8dbabe-1067-43e4-ab19-6d4c2e3e0e7b.ariel-tel.co.in, port: 51603, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: cm--0755.8d8dbabe-1067-43e4-ab19-6d4c2e3e0e7b.ariel-tel.co.in, port: 51650, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 未知国家-5.00MB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51627, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 未知国家-5.15MB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51608, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 未知国家-308.4KB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51625, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 🇨🇳 中国-13.85MB/s(Youtube:不良林), server: cm--0755.8d8dbabe-1067-43e4-ab19-6d4c2e3e0e7b.ariel-tel.co.in, port: 51642, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-674.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 未知国家-5.15MB/s(Youtube:不良林)
+      - 未知国家-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
