--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 未知国家-5.06MB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51608, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 🇯🇵 日本-2.36MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇯🇵 日本-1.73MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-209.6KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-1.39MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇰🇷 韩国-764.6KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 未知国家-5.00MB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51627, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
+  - {name: 🇯🇵 日本-2.28MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 未知国家-5.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-209.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.39MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-764.6KB/s(Youtube:不良林)
+      - 未知国家-5.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.28MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
